# sopel-diagnosis

./: README.md  setup.cfg  setup.py
sopel_diagnosis/: __init__.py  plugin.py
